Cleaned up Eligibility page

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -68,13 +68,22 @@ tags:
 </div>
      
 
-<div class="row">  
-<h4>SACDC Annual Reports</h4></br>
+<div class="row">
 
-		<ul class="list-inline">
-  		  <li><% report = @items['/clinic_info/downloads/Annual_Report_2013/'] %>
-      <a href="<%= report.path %>"><img src="<%= report.path(:rep => :thumbnail) %>"></a> 2012-2013 Annual Report
-  		  </li>
-		</ul>    
-<p><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></p>
+     <div class="col-md-3">
+     </div>
+
+     <div class="col-md-6">
+  
+<h3 class="text-center">SACDC Annual Reports</h3>
+<h5 class="text-center">Starting in 2013, SA-CDC has put out annual reports in a digital format so that you can learn more about our passion and work! Please feel free to read through the past reports to learn more about who we are and what we do.</h5>
+
+<a href="http://online.fliphtml5.com/egva/dsrs/#p=1" target="_blank"><img src="/static/imgs/Annual_Report.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive"></a>
+
+     </div>
+
+     <div class="col-md-3">
+     </div>
 </div>
+<h6 class="text-center"><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></h6>
+
