--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -5,10 +5,51 @@ precedence: 3
 tags:
   - sa-cdc
 ---
-<h2>Seeking Dental Care</h2>
-<div>
-SACDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page in order to determine eligibility. If eligible, please call 210-220-2300 to schedule a visit.
-</div>
+<h1 class="text-center">Seeking Dental Care</h1>
+<h3 class="text-center">
+SA-CDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page to determine eligibility.</h3>
+
+<div class="row">
+
+  <div class="col-md-6">
+
+<p>
+Clinic Hours<br>
+Monday through Friday<br>
+8:30 a.m. to 3:30 p.m.<br>
+</p>
+
+<p>
+Please call (210)220-2300 for appointments.
+</p>
+
+<p>
+Free Dental Services Include:<br>
+Exams<br>
+X-rays<br>
+General Dentistry<br>
+Oral Health Education<br>
+Cleanings<br>
+Fillings<br>
+Extractions and more…<br>
+</p>
+
+<p>
+Prosthetics Include:<br>
+Dentures<br>
+Bridges<br>
+Partials<br>
+</p>
+
+<p>
+Clients are asked to pay only for the discounted materials cost for prosthetics.
+</p>
+
+  </div>
+  <div class="col-md-6">
+
+<p>All clients must be age 18 or older and reside in San Antonio/Bexar County. Care is provided without regard for race, creed, or gender.</p>
+
 <form role="form" id="my-form">
   <div class="form-group">
     <div class="input-group">
@@ -58,48 +99,17 @@ SACDC was established in 1986 to provide free dental care for low income and hom
   <div class="checkbox">
     <label>
       <input type="checkbox" name="ins" value="">
-      Check this box if you have denal insurance
+      Check this box if you have dental insurance
     </label>
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
-<div class="alert alert-success" id="elig" style="display:none">You are eligible to receive care. Please visit our location to receive care.</div>
+<div class="alert alert-success" id="elig" style="display:none">You are eligible to receive care. Please <a href="/seek_care/sched_vst">schedule a visit.</a></div>
 <div class="alert alert-danger" id="inelig" style="display:none">You are not eligible to receive care. Please call with any questions.</div>
 
-<p>All clients must be age 18 or older and reside in San Antonio/Bexar County. Care is provided without regard for race, creed, or gender.</p>
-
-<p>
-Clinic Hours<br>
-Monday through Friday<br>
-8:30 a.m. to 3:30 p.m.<br>
-</p>
-
-<p>
-Please call (210)220-2300 for appointments.
-</p>
-
-<p>
-Free Dental Services Include:<br>
-Exams<br>
-X-rays<br>
-General Dentistry<br>
-Oral Health Education<br>
-Cleanings<br>
-Fillings<br>
-Extractions and more…<br>
-</p>
-
-<p>
-Prosthetics Include:<br>
-Dentures<br>
-Bridges<br>
-Partials<br>
-</p>
-
-<p>
-Clients are asked to pay only for the discounted materials cost for prosthetics.
-</p>
+  </div>
+</div>
 
 <script>
 function getZipElig(zip){
