--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -15,7 +15,9 @@ tags:
     <div class="row">
       <div class="col-sm-4">
         <img src="/static/imgs/The_official_emblem_of_dentistry_(color).png" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-        <h3>Clinical volunteers</h3>
+        <h3>Why Get Involved</h3>
+        <p>Volunteers are crucial to the success of our agency. In fact, each year SACDC relies upon its nearly 300 volunteers to bring help healing and hope to almost 8,000 patients. With so much need in our community, there is a need for nearly eery kind of skill!</p>
+        <p>""</p>
         <ul>
           <li>Dentists</li>
           <li>Hygienists</li>
@@ -26,7 +28,7 @@ tags:
       </div>
       <div class="col-sm-4">
         <img src="/static/imgs/sheikh_tuhin_Book_Open.png" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
-        <h3>Non-clinical volunteers</h3>
+        <h3>Ways To Get Involved</h3>
         <ul>
           <li>Office Receptionists</li>
           <li>Telephone answering</li>
