Created logos & pic content folders in imgs

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -5,10 +5,11 @@ precedence: 1
 tags:
   - sa-cdc
 ---
-<div class="row">
+
         <h1 class="text-center">San Antonio Christian Dental Clinic</h1>
         <p class="lead text-center"><i>Since 1986--making a difference in the dental health of those in need</i></p>
 
+<div class="row">
      <div class="col-md-2">
      </div>
 
@@ -23,6 +24,8 @@ tags:
      <div class="col-md-2">
      </div>
 
+</div>
+<div class="row">
 
      <div class="col-md-6">
       
