--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -6,10 +6,15 @@ tags:
   - service 
 ---
 
-<h3>Help our Mission by Making a Monetary Donation</h3><br>
+<h3 class="text-center">Help our Mission by Making a Monetary Donation</h3><br>
 
-<p>As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
+<h5 class="text-center>As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</h5>
 
-<p>If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:#?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">email@sabc.com.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</p>
+<h5 class="text-center>If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</h5>
+
+<p class="text-center">
+
 <a class="btn btn-outline-inverse btn-lg" href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" target="_blank">DONATE NOW</a>
-PLACEHOLDER FOR DONATE NOW BUTTON<br>
+
+</p>
+
