Get involved and Schedule Visit pages worked.

--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -9,11 +9,11 @@ tags:
 
 <p class="text-center"><em>Important:  You must bring a photo ID with you when you visit our clinic for services.</em></p>
 
-<div class="row">
+<div class="row page">
 
 	<div class="col-md-4">
     <img src="" alt="Patient">
-    <h4 class="text-center">Schedule Your Visit Today</h4>
+    <h4>Schedule Your Visit Today</h4>
     <p class="">
       SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
       You can come by our office at the address above.</br>
@@ -24,8 +24,8 @@ tags:
 
   <div class="col-md-4">
     <img src="" alt="Clinic">
-    <h4 class="text-center">Before You Visit</h4>
-	  <p class="text-center">
+    <h4>Before You Visit</h4>
+	  <p>
       After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
     </p>
     <ul class="list-inline">
@@ -36,7 +36,7 @@ tags:
 	</div>
 	<div class="col-md-4">
     <img src="" alt="Map">
-    <h4 class="text-center">Location</h4>
+    <h4>Location</h4>
     <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="">check with Via</a> or get <a href="">directions through Google Maps</a>.</p>
     <a href="maps.google.com" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
     <a href="" class="btn btn-primary active" role="button">Via Transit</a>
