--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -12,47 +12,27 @@ tags:
 
     <hr class="half-rule">
 
-    <div class="row">
+    <div class="row page">
       <div class="col-sm-4">
         <img src="/static/imgs/The_official_emblem_of_dentistry_(color).png" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
         <h3>Why Get Involved</h3>
         <p>Volunteers are crucial to the success of our agency. In fact, each year SACDC relies upon its nearly 300 volunteers to bring help healing and hope to almost 8,000 patients. With so much need in our community, there is a need for nearly eery kind of skill!</p>
         <p>""</p>
-        <ul>
-          <li>Dentists</li>
-          <li>Hygienists</li>
-          <li>Dental Assistants</li>
-          <li>Sterilization Technicians</li>
-          <li>Laboratory Technicians</li>
-        </ul>
       </div>
       <div class="col-sm-4">
         <img src="/static/imgs/sheikh_tuhin_Book_Open.png" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
         <h3>Ways To Get Involved</h3>
-        <ul>
-          <li>Office Receptionists</li>
-          <li>Telephone answering</li>
-          <li>Dental record maintenance</li>
-          <li>Database entry</li>
-          <li>Graphic Design</li>
-          <li>Special Events</li>
-          <li>Fundraising</li>
-        </ul>
+        <p>Some examples of the kind of support we need</p>
+        <p>&gt; <em>Dental Staff</em>: Dentists, Hygenists, RDAs, Sterilization, and Laboratory Technicians</p>
+        <p>&gt; <em>Administrative Volunteers</em>: Office Receptionists, Record Maintenance, Database Entry</p>
+        <p>&gt; <em>Development and Marketing</em>: Graphic Designers, Special Events Coordinators, Fundraising, Social Media Champions, and Business Outreach</p>
+        <p>""</p>
       </div>
       <div class="col-sm-4">
         <img src="/static/imgs/tooth.png" alt="Components" class="bs-docs-featurette-img img-responsive">
-        <h3>Get started</h3>
-        <% h = @items['/clinic_info/downloads/Volunteer_Application/'] %>
-        <ol>
-          <li>Complete <a href="<%= h.path %>">this application form</a></li>
-          <li>Submit it:
-            <ul>
-              <li><a href="mailto:#">email (email@sa-cdc.org)</a></li>
-              <li><a href="#">mail </a></li>
-              <li>bring to the clinic</li>
-            </ul>
-          <li>Questions: (210) 220-2301</li>
-        </ol>
+        <h3>Still Interested?</h3>
+        <p>For those interested in volunteering, please fillout <a href="/clinic_info/downloads/Volunteer_Application/">this application form</a> and submit it by email to email@sacdc.org or bring it by the clinic so we can meet you in person.  Questions? Call <a href="tel://12102202301">(210) 220-2301</a> for more information.
+        <p>""</p>
       </div>
     </div>
 
