Finished Get Involved and Schedule Visit pages.

--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -12,7 +12,7 @@ tags:
 <div class="row page">
 
 	<div class="col-md-4">
-    <img src="" alt="Patient">
+    <img src="/static/imgs/pic-content/pic10.JPG" alt="Patient" class="bs-docs-featurette-img img-responsive">
     <h4>Schedule Your Visit Today</h4>
     <p class="">
       SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
@@ -23,7 +23,7 @@ tags:
 	</div>
 
   <div class="col-md-4">
-    <img src="" alt="Clinic">
+    <img src="/static/imgs/haven-for-hope-2.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
     <h4>Before You Visit</h4>
 	  <p>
       After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
@@ -35,7 +35,7 @@ tags:
     </ul>
 	</div>
 	<div class="col-md-4">
-    <img src="" alt="Map">
+    <div class="bs-docs-featurette-img img-responsive"><iframe style="height:240px; width:360px; border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe></div>
     <h4>Location</h4>
     <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="">check with Via</a> or get <a href="">directions through Google Maps</a>.</p>
     <a href="maps.google.com" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
