Linked 480px images on /clinic_info, /sched-vst, get_involved

--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -12,7 +12,7 @@ tags:
 <div class="row page">
 
 	<div class="col-md-4">
-    <img src="/static/imgs/pic-content/pic10.JPG" alt="Patient" class="bs-docs-featurette-img img-responsive">
+    <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
     <h4>Schedule Your Visit Today</h4>
     <p class="">
       SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
