--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -14,14 +14,14 @@ tags:
 
     <div class="row page">
       <div class="col-sm-4">
-        <img src="/static/imgs/pic-content/pic4.JPG" alt="Dentist" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic4_480.jpg" alt="Dentist" class="bs-docs-featurette-img img-responsive">
         <h3>Why Get Involved</h3>
         <p>Volunteers are crucial to the success of our agency. In fact, each year SACDC relies upon its nearly 300 volunteers to bring help healing and hope to almost 8,000 patients. With so much need in our community, there is a need for nearly eery kind of skill!</p>
         <hr class="half-rule">
         <p><em>"The fingerprints of God, I see those fingerprints in all of you. And may God Bless this clinic with all its needs. Thank you all for the difference you make in people’s lives. There are no words except God bless you."</em></p>
       </div>
       <div class="col-sm-4">
-        <img src="/static/imgs/pic-content/pic13.JPG" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
         <h3>Ways To Get Involved</h3>
         <p>Some examples of the kind of support we need</p>
         <p>&gt; <em>Dental Staff</em>: Dentists, Hygenists, RDAs, Sterilization, and Laboratory Technicians</p>
@@ -31,7 +31,7 @@ tags:
         <p><em>"I just want to thank all of the staff and volunteers of the Christian Dental Clinic. I want to let you all know that you are making a difference and doing a very good job. As a former homeless and recovery citizen of this city, I find myself so grateful today. I have my smile and self-esteem back thanks to you all."</em></p>
       </div>
       <div class="col-sm-4">
-        <img src="/static/imgs/pic-content/pic9.JPG" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
         <h3>Still Interested?</h3>
         <p>For those interested in volunteering, please fillout <a href="/clinic_info/downloads/Volunteer_Application/">this application form</a> and submit it by email to email@sacdc.org or bring it by the clinic so we can meet you in person.
         <p>Questions? Call <a href="tel://12102202301">(210) 220-2301</a> for more information.</p>
