Swapped seak_care form and description, used 'Hours/week' to shorten form

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -13,41 +13,6 @@ SA-CDC was established in 1986 to provide free dental care for low income and ho
 
   <div class="col-md-6">
 
-<p>
-Clinic Hours<br>
-Monday through Friday<br>
-8:30 a.m. to 3:30 p.m.<br>
-</p>
-
-<p>
-Please call (210)220-2300 for appointments.
-</p>
-
-<p>
-Free Dental Services Include:<br>
-Exams<br>
-X-rays<br>
-General Dentistry<br>
-Oral Health Education<br>
-Cleanings<br>
-Fillings<br>
-Extractions and more…<br>
-</p>
-
-<p>
-Prosthetics Include:<br>
-Dentures<br>
-Bridges<br>
-Partials<br>
-</p>
-
-<p>
-Clients are asked to pay only for the discounted materials cost for prosthetics.
-</p>
-
-  </div>
-  <div class="col-md-6">
-
 <p>All clients must be age 18 or older and reside in San Antonio/Bexar County. Care is provided without regard for race, creed, or gender.</p>
 
 <form role="form" id="my-form">
@@ -84,7 +49,7 @@ Clients are asked to pay only for the discounted materials cost for prosthetics.
         <input type="radio" name="incomeRadio" id="hourly" value="hourly"> Hourly Income: $
       </span>
       <input type="text" class="form-control" id="hourlyIncome" placeholder="6" disabled>
-      <span class="input-group-addon">x Hours per week</span>
+      <span class="input-group-addon">x Hours/week</span>
       <input type="number" class="form-control" id="hours" placeholder="25" disabled>
     </div>
   </div>
@@ -109,6 +74,42 @@ Clients are asked to pay only for the discounted materials cost for prosthetics.
 <div class="alert alert-danger" id="inelig" style="display:none">You are not eligible to receive care. Please call with any questions.</div>
 
   </div>
+  <div class="col-md-6">
+
+<p>
+Clinic Hours<br>
+Monday through Friday<br>
+8:30 a.m. to 3:30 p.m.<br>
+</p>
+
+<p>
+Please call (210) 220-2300 for appointments.
+</p>
+
+<p>
+Free Dental Services Include:<br>
+Exams<br>
+X-rays<br>
+General Dentistry<br>
+Oral Health Education<br>
+Cleanings<br>
+Fillings<br>
+Extractions and more…<br>
+</p>
+
+<p>
+Prosthetics Include:<br>
+Dentures<br>
+Bridges<br>
+Partials<br>
+</p>
+
+<p>
+Clients are asked to pay only for the discounted materials cost for prosthetics.
+</p>
+
+  </div>
+
 </div>
 
 <script>
