--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -19,7 +19,7 @@ tags:
       You can come by our office at the address above.</br>
     </p>
     <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
-    <a href="mailto:#?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">email@sabc.com.</a>
+    <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SA-CDC</a>
 	</div>
 
   <div class="col-md-4">
