--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -10,35 +10,39 @@ tags:
 <div class="row">
         <div class="col-md-4">
 
-<p class="text-center">
-<a href="http://teenchallengetx.org/" target="_blank"><img src="/static/imgs/logos/Teen_Challenge.jpg" height="70"></a>
+<p class="text-center partner">
+<span class="partner"></span>
+<a href="http://teenchallengetx.org/" target="_blank"><img class="partner" src="/static/imgs/logos/Teen_Challenge.jpg"></a>
 
 </p>
 
 <h3>Teen Challenge of Texas</h3>
 <h5>Teen Challenge of Texas welcomes individuals struggling with addiction, introduces them to God’s love, initiates the discipleship process, and trains them to demonstrate God’s love to others – magnifying God in the process.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.samm.org" target="_blank"><img src="/static/imgs/logos/SAMMinistries.jpg" height="100"></a>
+<span class="partner"></span>
+<a href="http://www.samm.org" target="_blank"><img class="partner" src="/static/imgs/logos/SAMMinistries.jpg"></a>
 
 </p>
 
 <h3>SAMMinistries</h3>
 <h5>SAMMinistries is an interfaith ministry whose mission is to help the homeless and those at risk of becoming homeless attain self-sufficiency by offering, with dignity and compassion, shelter, housing, and services. SAMMinistries also provides volunteers opportunities to be renewed and fulfilled as they serve.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://victoryoutreach.org/" target="_blank"><img src="/static/imgs/logos/Victory_International.jpg" height="140"></a>
+<span class="partner"></span>
+<a href="http://victoryoutreach.org/" target="_blank"><img class="partner" src="/static/imgs/logos/Victory_International.jpg"></a>
 
 </p>
 
 <h3>Victory Outreach International</h3>
 <h5>Victory Outreach is an international, church-oriented Christian ministry called to the task of evangelizing and discipling the hurting people of the world, with the message of hope and plan of Jesus Christ.  This call involves a commitment to plant and develop churches, rehabilitation homes and training centers, in strategic cities of the world.  Victory Outreach inspires and instills within people the desire to fulfill their potential in life with a sense of dignity, belonging, and destiny.  Victory Outreach works cooperatively with others of mutual purpose in accomplishing the task before us.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.havenforhope.org/" target="_blank"><img src="/static/imgs/logos/Haven_for_Hope.jpg" height="110"></a>
+<span class="partner"></span>
+<a href="http://www.havenforhope.org/" target="_blank"><img class="partner" src="/static/imgs/logos/Haven_for_Hope.jpg"></a>
 
 </p>
 
@@ -51,36 +55,40 @@ tags:
 
         <div class="col-md-4">
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.ccaosa.org/" target="_blank"><img src="/static/imgs/logos/Catholic_Charities.jpg" height="120"></a>
+<span class="partner"></span>
+<a href="http://www.ccaosa.org/" target="_blank"><img class="partner" src="/static/imgs/logos/Catholic_Charities.jpg"></a>
 
 </p>
 
 <h3>Catholic Charities</h3>
 <h5>The mission of Catholic Charities is to provide for the needs of our community through selfless service under the sign of love. Committed to empowering individuals and families with the goal of fostering independence, we provide over 25 bilingual and culturally sensitive programs in 19 counties throughout the Archdiocese of San Antonio without regard to gender, race, creed, religion, disability, national origin, or socioeconomic status.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://christianassistanceministry.org/" target="_blank"><img src="/static/imgs/logos/CAM.jpg" height="100"></a>
+<span class="partner"></span>
+<a href="http://christianassistanceministry.org/" target="_blank"><img class="partner" src="/static/imgs/logos/CAM.jpg"></a>
 
 </p>
 
 <h3>Christian Assistance Ministries</h3>
 <h5>To share the love of Christ by providing immediate assistance and encouragement to people in crisis.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://fvps.org/" target="_blank"><img src="/static/imgs/logos/fvps.jpg" height="120"></a>
+<span class="partner"></span>
+<a href="http://fvps.org/" target="_blank"><img class="partner" src="/static/imgs/logos/fvps.jpg"></a>
 
 </p>
 
 <h3>Family Violence Prevention Services, Inc.</h3>
 <h5>The mission of Family Violence Prevention Services Inc. is to break the cycle of violence and to strengthen families, by providing the necessary tools for self-sufficiency through the delivery of emergency shelter, transitional housing, education, effective parenting education, and early intervention with children and youth.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.agif-nvop.org/" target="_blank"><img src="/static/imgs/logos/National_Vets_Outreach.jpg" height="120"></a>
+<span class="partner"></span>
+<a href="http://www.agif-nvop.org/" target="_blank"><img class="partner" src="/static/imgs/logos/National_Vets_Outreach.jpg"></a>
 
 </p>
 
@@ -90,27 +98,30 @@ tags:
 	</div>
 	<div class="col-md-4">
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank"><img src="/static/imgs/logos/Salvation_Army.jpg" height="100"></a>
+<span class="partner"></span>
+<a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank"><img class="partner" src="/static/imgs/logos/Salvation_Army.jpg"></a>
 
 </p>
 
 <h3>Salvation Army</h3>
-<h5>The Salvation Army, an international movement, is an evangelical part of the universal Christian Church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</h5>
+<h5>The Salvation Army, an international movement, is an evangelical p class="partner"art of the universal Christian Church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.alphahome.org/" target="_blank"><img src="/static/imgs/logos/Alpha_Home.jpg" height="100"></a>
+<span class="partner"></span>
+<a href="http://www.alphahome.org/" target="_blank"><img class="partner" src="/static/imgs/logos/Alpha_Home.jpg"></a>
 
 </p>
 
 <h3>Alpha Home</h3>
 <h5>The mission of Alpha Home is to provide spiritually based substance abuse treatment and support to women and their families to prepare them to become more productive members of society.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://howfoundationsa.org/" target="_blank"><img src="/static/imgs/logos/HOW.png" height="60"></a>
+<span class="partner"></span>
+<a href="http://howfoundationsa.org/" target="_blank"><img class="partner" src="/static/imgs/logos/HOW.png"></a>
 
 </p>
 
@@ -118,18 +129,20 @@ tags:
 <h5>The H.O.W. Foundation of San Antonio offers a unique approach 
 for treating addiction.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img src="/static/imgs/logos/WellMed.jpg" height="100"></a>
+<span class="partner"></span>
+<a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img class="partner" src="/static/imgs/logos/WellMed.jpg"></a>
 
 </p>
 
 <h3>WellMed</h3>
 <h5>WellMed’s mission is to change the face of healthcare delivery for seniors. We have been recognized as a leader in preventive care and internal medicine by the healthcare industry, especially in Weslaco and McAllen, TX. Our Coordinated Care delivery system is designed to meet the individual healthcare needs of seniors.</h5>
 
-<p class="text-center">
+<p class="text-center partner">
 
-<a href="http://www.icare-sa.org/" target="_blank"><img src="/static/imgs/logos/I_Care_SA.jpg" height="120"></a>
+<span class="partner"></span>
+<a href="http://www.icare-sa.org/" target="_blank"><img class="partner" src="/static/imgs/logos/I_Care_SA.jpg"></a>
 
 </p>
 
