Standardized page headings and formatting.

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -6,15 +6,18 @@ tags:
   - service 
 ---
 
-<h3 class="text-center">Help our Mission by Making a Monetary Donation</h3><br>
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
+    <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
 
-<h5 class="text-center>As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</h5>
+    <hr class="half-rule">
 
-<h5 class="text-center>If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</h5>
+    <p class="text-center">If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</p>
 
-<p class="text-center">
+    <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
 
-<a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
+    <hr class="half-rule">
 
-</p>
-
+	</div>
+</div>
