--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -5,40 +5,45 @@ tags:
   - none
 ---
 
-<h1 class="text-center">Schedule a Visit with Us</h1>
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">Schedule a Visit with Us</h2>
+    <p class="lead">Important:  You must bring a photo ID with you when you visit our clinic for services.</p>
 
-<p class="text-center"><em>Important:  You must bring a photo ID with you when you visit our clinic for services.</em></p>
+    <hr class="half-rule">
 
-<div class="row page">
+    <div class="row page">
 
-	<div class="col-md-4">
-    <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
-    <h4>Schedule Your Visit Today</h4>
-    <p class="">
-      SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
-      You can come by our office at the address above.</br>
-    </p>
-    <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
-    <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SA-CDC</a>
-	</div>
-
-  <div class="col-md-4">
-    <img src="/static/imgs/haven-for-hope-2.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
-    <h4>Before You Visit</h4>
-	  <p>
-      After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
-    </p>
-    <ul class="list-inline">
-      <li><a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a></li>
-      <li><a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a></li>
-      <li><a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a></li>
-    </ul>
-	</div>
-	<div class="col-md-4">
-    <div class="bs-docs-featurette-img img-responsive"><iframe style="height:240px; width:360px; border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe></div>
-    <h4>Location</h4>
-    <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
-    <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
-    <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
-	</div>
+	    <div class="col-md-4">
+        <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
+        <h4>Schedule Your Visit Today</h4>
+        <p class="">
+          SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
+          You can come by our office at the address above.</br>
+        </p>
+        <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
+        <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SA-CDC</a>
+	    </div>
+    
+      <div class="col-md-4">
+        <img src="/static/imgs/haven-for-hope-2.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+        <h4>Before You Visit</h4>
+	      <p>
+          After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
+        </p>
+        <ul class="list-inline">
+          <li><a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a></li>
+          <li><a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a></li>
+          <li><a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a></li>
+        </ul>
+	    </div>
+	    <div class="col-md-4">
+        <div class="bs-docs-featurette-img img-responsive"><iframe style="height:240px; width:360px; border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe></div>
+        <h4>Location</h4>
+        <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
+        <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
+        <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
+	    </div>
+    </div>
+  </div>
 </div>
