--- a/content/clinic_info/downloads.html
+++ b/content/clinic_info/downloads.html
@@ -5,19 +5,24 @@ tags:
   - none
 ---
 
-<h3>Forms, documents, and other information for download:</h3>
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">SA-CDC Download Section</h2>
+    <p class="lead">Forms, documents, and other information for download.</p>
+    <hr class="half-rule">
 
-<br>
-
-<ul class="list-inline">
-  <% docs = @items['/clinic_info/downloads/'].children %>
-  <% docs.each do |doc| %>
-    <li>
-      <% path = doc.path %>
-      <a href="<%= path %>" style="font-size: 1.5em;">
-        <img src="<%= doc.path(:rep => :thumbnail) %>" style="margin: 5px 5px 5px 5px;">
-        <%= path.sub('/clinic_info/downloads/', '') %>
-      </a>
-    </li>
-  <% end %>
-</ul>
+    <ul class="list-inline">
+      <% docs = @items['/clinic_info/downloads/'].children %>
+      <% docs.each do |doc| %>
+        <li>
+          <% path = doc.path %>
+          <a href="<%= path %>" style="font-size: 1.5em;">
+            <img src="<%= doc.path(:rep => :thumbnail) %>" style="margin: 5px 5px 5px 5px;">
+            <%= path.sub('/clinic_info/downloads/', '') %>
+          </a>
+        </li>
+      <% end %>
+    </ul>
+    <hr class="half-rule">
+  </div>
+</div>
