--- a/content/index.html
+++ b/content/index.html
@@ -5,49 +5,53 @@ tags:
   - none
 ---
 
-<div class="row">
-  <h1 class="text-center">San Antonio Christian Dental Clinic</h1>
-</div>
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">San Antonio Christian Dental Clinic</h2>
+    <p class="lead">Helping.</p>
 
-<div id="show" class="row carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#show" data-slide-to="0" class="active"></li>
-    <li data-target="#show" data-slide-to="1"></li>
-    <li data-target="#show" data-slide-to="2"></li>
-  </ol>
+    <hr class="half-rule">
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="static/imgs/IMG_1978.JPG" alt="A">
-      <div class="carousel-caption">
-        <h3>Giving Dignity, Giving Hope</h3>
-        SACDC provides $3 million dollars in free dental care to over 9,000 patients each year.
+    <div id="show" class="row carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#show" data-slide-to="0" class="active"></li>
+        <li data-target="#show" data-slide-to="1"></li>
+        <li data-target="#show" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="static/imgs/IMG_1978.JPG" alt="A">
+          <div class="carousel-caption">
+            <h3>Giving Dignity, Giving Hope</h3>
+            SACDC provides $3 million dollars in free dental care to over 9,000 patients each year.
+          </div>
+        </div>
+        <div class="item">
+          <img src="static/imgs/IMG_1888.JPG" alt="B">
+          <div class="carousel-caption">
+            <h3>Welcome to SACDC</h3>
+            Since 1986- making a difference in the dental health of those in need
+          </div>
+        </div>
+        <div class="item">
+          <img src="static/imgs/haven-for-hope-2.jpg" alt="C">
+          <div class="carousel-caption">
+            <h3>Haven for Hope</h3>
+            Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope, and healing to those who need it the most.
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="item">
-      <img src="static/imgs/IMG_1888.JPG" alt="B">
-      <div class="carousel-caption">
-        <h3>Welcome to SACDC</h3>
-        Since 1986- making a difference in the dental health of those in need
-      </div>
-    </div>
-    <div class="item">
-      <img src="static/imgs/haven-for-hope-2.jpg" alt="C">
-      <div class="carousel-caption">
-        <h3>Haven for Hope</h3>
-        Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope, and healing to those who need it the most.
-      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#show" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#show" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
     </div>
   </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#show" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#show" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
 </div>
-
