Fixed carousel gradient, disabled 'container' to fix right alignmnet, disabled search

--- a/content/clinic_info/downloads.html
+++ b/content/clinic_info/downloads.html
@@ -6,7 +6,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">SA-CDC Download Section</h2>
     <p class="lead">Forms, documents, and other information for download.</p>
     <hr class="half-rule">
@@ -24,5 +24,5 @@ tags:
       <% end %>
     </ul>
     <hr class="half-rule">
-  </div>
+  <!-- </div> -->
 </div>
