--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -6,7 +6,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Partnering Organizations</h2>
 
     <hr class="half-rule">
@@ -115,5 +115,5 @@ for treating addiction.</h5>
         <h5>ICSA, through donations and volunteer time, strives to help people who might not otherwise be able to maintain this gift of sight.</h5>
 	    </div>
     </div>
-	</div>
+  <!-- </div> -->
 </div>
