--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -7,7 +7,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
     <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
 
@@ -19,5 +19,5 @@ tags:
 
     <hr class="half-rule">
 
-	</div>
+  <!-- </div> -->
 </div>
