--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -6,7 +6,7 @@ tags:
   - sa-cdc
 ---
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Get Involved.</h2>
     <p class="lead">Want to help the community? We need volunteers.</p>
 
@@ -41,6 +41,6 @@ tags:
     </div>
 
     <hr class="half-rule">
-  </div>
+  <!-- </div> -->
 </div>
 
