--- a/content/index.html
+++ b/content/index.html
@@ -6,7 +6,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">San Antonio Christian Dental Clinic</h2>
     <p class="lead">Helping.</p>
 
@@ -53,5 +53,5 @@ tags:
         <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
