--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -6,7 +6,7 @@ tags:
   - sa-cdc
 ---
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Seeking Dental Care</h2>
     <p class="lead">
       SA-CDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page to determine eligibility.
@@ -117,7 +117,7 @@ tags:
       </div>
     </div>
 
-  </div>
+  <!-- </div> -->
 </div>
       
 <script>
