--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -6,7 +6,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Schedule a Visit with Us</h2>
     <p class="lead">Important:  You must bring a photo ID with you when you visit our clinic for services.</p>
 
@@ -45,5 +45,5 @@ tags:
         <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
 	    </div>
     </div>
-  </div>
+  <!-- </div> -->
 </div>
