--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -7,7 +7,7 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <div class="container">
+  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">San Antonio Christian Dental Clinic</h2>
     <p class="lead">Since 1986--making a difference in the dental health of those in need.</p>
 
@@ -56,5 +56,5 @@ tags:
       </div>
     </div>
     <h6 class="text-center"><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></h6>
-  </div>
+  <!-- </div> -->
 </div>
