--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -68,7 +68,7 @@ tags:
           <div class="checkbox">
             <label>
               <input type="checkbox" name="ins" value="">
-              Check this box if you have dental insurance
+              <p align="left"> Check this box if you have dental insurance</p>
             </label>
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
