--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -38,7 +38,9 @@ tags:
         </ul>
 	    </div>
 	    <div class="col-md-4">
-        <div class="bs-docs-featurette-img img-responsive"><iframe style="height:240px; width:360px; border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe></div>
+        <div class="text-center map-container">
+          <iframe width="480" height="317" style="border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe>
+        </div>
         <h4>Location</h4>
         <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
         <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
