--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -23,19 +23,19 @@ tags:
         </p>
         <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
         <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SA-CDC</a>
+        <hr class="half-rule">
 	    </div>
     
       <div class="col-md-4">
-        <img src="/static/imgs/haven-for-hope-2.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic16_480.jpg" alt="San Antonio Christian Dental Clinic" class="bs-docs-featurette-img img-responsive">
         <h4>Before You Visit</h4>
 	      <p>
           After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
         </p>
-        <ul class="list-inline">
-          <li><a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a></li>
-          <li><a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a></li>
-          <li><a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a></li>
-        </ul>
+          <a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a>
+          <a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a>
+          <a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a>
+          <hr class="half-rule">
 	    </div>
 	    <div class="col-md-4">
         <div class="text-center map-container">
@@ -45,6 +45,7 @@ tags:
         <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
         <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map: 1 Haven for Hope Way</a>
         <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
+        <hr class="half-rule">
 	    </div>
     </div>
   <!-- </div> -->
