Made changes per John

--- a/content/index.html
+++ b/content/index.html
@@ -8,7 +8,7 @@ tags:
 <div class="bs-docs-featurette">
   <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">San Antonio Christian Dental Clinic</h2>
-    <p class="lead">Helping.</p>
+    <p class="lead">Bringing help, healing and hope to San Antonio since 1986.</p>
 
     <hr class="half-rule">
 
