--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -47,7 +47,7 @@ tags:
           <a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Salvation_Army.jpg"></a>
         </p>
         <h3>Salvation Army</h3>
-        <h5>The Salvation Army, an international movement, is an evangelical p class="partner"art of the universal Christian Church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</h5></br>
+        <h5>The Salvation Army, an international movement, is an evangelical partner of the universal Christian Church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</h5></br>
 
         <p class="text-center partner">
           <a href="http://www.alphahome.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Alpha_Home.jpg"></a>
