More changes per John

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -54,7 +54,7 @@ tags:
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h3 class="text-center">SACDC Annual Reports</h3>
-        <h5 class="text-center">Starting in 2013, SA-CDC has put out annual reports in a digital format so that you can learn more about our passion and work! Please feel free to read through the past reports to learn more about who we are and what we do.</h5>
+        <h5 class="text-center">Starting in 2013, SACDC has put out annual reports in a digital format so that you can learn more about our passion and work! Please feel free to read through the past reports to learn more about who we are and what we do.</h5>
         <a href="http://online.fliphtml5.com/egva/dsrs/#p=1" target="_blank"><img src="/static/imgs/Annual_Report.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive"></a>
       </div>
     </div>
