--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -9,7 +9,7 @@ tags:
   <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
     <h2 class="bs-docs-featurette-title">Seeking Dental Care</h2>
     <p class="lead">
-      SA-CDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page to determine eligibility.
+      SACDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page to determine eligibility.
     </p>
 
     <hr class="half-rule">
@@ -71,7 +71,7 @@ tags:
               <p align="left"> Check this box if you have dental insurance</p>
             </label>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
         <div class="alert alert-success" id="elig" style="display:none">You are eligible to receive care. Please <a href="/seek_care/sched_vst">schedule a visit.</a></div>
